Страница index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,96 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Дизайн-студия Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
-
+	<header class = "main-header">
+	 <nav class = "main-class">
+		 <img src = "img/header-logo.svg" width = "215" height = "180" alt = "Логотип студии_ч/б">
+		<ul class = "site-navigation">
+		  <li><a href="studio.html">Студия</a></li>
+		  <li><a href="customers.html">Клиенты</a></li>
+		  <li><a href="shop.html">Магазин</a></li>
+		  <li><a href="contact.html">Контакты</a></li>
+		</ul>
+		<ul class = "user-navigation">
+		  <li><a href="Cart.html">Корзина</a></li>
+		</ul>
+	 </nav>
+	</header>	
   </body>
+  <main class="container">
+   
+	<h2>Долго, дорого, скрупулёзно</h2>
+	<p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+	
+	<section class="services">
+	<a href="studio.html">УЗНАТЬ БОЛЬШЕ</a>
+	<h3>ВЕБ-САЙТЫ</h3>
+	<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+	<a href="shop.html">ЗАКАЗАТЬ</a>
+	<h3>ПРИЛОЖЕНИЯ</h3>
+	<p>Покорите топ-10 приложений в AppStore и Google Play</p>
+	<a href="shop.html">ЗАКАЗАТЬ</a>
+	<h3>ПРЕЗЕНТАЦИИ</h3>
+	<p>Вы даже не подозреваете насколько вы изумительны</p>
+	<a href="shop.html">ЗАКАЗАТЬ</a>
+	</section>
+	
+	<section class="features">
+	<b><p>Мы - маленькая, но гордая дизайн-студия из Краснодара.</p></b>
+	<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
+	<b><p>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p></b>
+	<ul>
+		<li>Bеб-сайтов любой сложности</li>
+		<li>Мобильных приложений для iOS и Android</li>
+		<li>Слайдшоу и видео для корпоративных презентаций</li>
+	</ul>
+	<img src = "img_2/main_logo.svg" alt = "Логотип студии_цветной">
+	<b><p>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЁМ:</p></b>
+	<table>
+		<tr>
+		  <td>146%</td>
+		  <td>100%</td>
+		  <td>50%</td>
+		</tr>
+		<tr>
+		  <td>Уровень самоотдачи</td>
+		  <td>Соблюдение сроков</td>
+		  <td>Минимальная предоплата</td>
+		</tr>
+	</table>
+	
+	<a href="#"><img src="img/html_academy.svg" alt = "Логотип_html_academy"> 
+	</a>
+	<a href="#"><img src="img/borodinsky.svg" alt = "Логотип_borodinsky"> 
+	</a>
+	<a href="#"><img src="img/pink.svg" alt = "Логотип_pink"> 
+	</a>
+	<a href="#"><img src="img/mishka.svg" alt = "Логотип_mishka"> 
+	</a>
+ 	</section>
+	
+	<div>
+	<h3>NЁRDS DESIGN STUDIO</h3>
+	<p>191186, Cанкт-Петербург,<br>
+	ул.Б.Конюшенная, д.19/8<br>
+	<br> тел.+7(812)275-75-75
+	</p>
+	<a href="modal_window_write_to_us.html">Напишите нам</a>
+	
+    <!--карта-->
+	</div>
+  </main>
+ 
+  <footer>
+  <div class = "footer-social">
+  <b>Давайте дружить, это выгодно!</b>
+  <p>Скидка 10% для друзей из социальных сетей</p>
+  <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+  
 </html>
