Убрал лишние пробелы, изменил название class для <nav>, изменил название для логотипа

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Дизайн-студия Нёрдс</title>
   </head>
   <body>
-	<header class = "main-header">
-	 <nav class = "main-class">
-		 <img src = "img/header-logo.svg" width = "215" height = "180" alt = "Логотип студии_ч/б">
+	<header class="main-header">
+	 <nav class="main-menu-navigation">
+		 <img src="img/header-logo.svg" width="215" height="180" alt="Логотип дизайн-студии Нердс">
 		<ul class = "site-navigation">
 		  <li><a href="studio.html">Студия</a></li>
 		  <li><a href="customers.html">Клиенты</a></li>
