--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	 <nav class="main-menu-navigation">
 		 <img src="img/header-logo.svg" width="215" height="180" alt="Логотип дизайн-студии Нердс">
 		<ul class = "site-navigation">
-		  <li><a href="studio.html">Студия</a></li>
-		  <li><a href="customers.html">Клиенты</a></li>
+		  <li><a href="#">Студия</a></li>
+		  <li><a href="#">Клиенты</a></li>
 		  <li><a href="shop.html">Магазин</a></li>
-		  <li><a href="contact.html">Контакты</a></li>
+		  <li><a href="#">Контакты</a></li>
 		</ul>
 		<ul class = "user-navigation">
-		  <li><a href="Cart.html">Корзина</a></li>
+		  <li><a href="#">Корзина</a></li>
 		</ul>
 	 </nav>
 	</header>	
