--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<header class="main-header">
 	 <nav class="main-menu-navigation">
 		 <img src="img/header-logo.svg" width="215" height="180" alt="Логотип дизайн-студии Нердс">
-		<ul class = "site-navigation">
-		  <li><a href="#">Студия</a></li>
-		  <li><a href="#">Клиенты</a></li>
-		  <li><a href="shop.html">Магазин</a></li>
-		  <li><a href="#">Контакты</a></li>
+		<ul class="site-navigation">
+		  <li class="menuStudio"><a href="#">Студия</a></li>
+		  <li class="menuCustomer"><a href="#">Клиенты</a></li>
+		  <li class="menuShop"><a href="shop.html">Магазин</a></li>
+		  <li class="menuContact"><a href="#">Контакты</a></li>
 		</ul>
-		<ul class = "user-navigation">
-		  <li><a href="#">Корзина</a></li>
+		<ul class="user-navigation">
+		  <li class="menuCart"><a href="#">Корзина</a></li>
 		</ul>
 	 </nav>
 	</header>	
