--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
   </body>
   <main class="container">
    
-	<h2>Долго, дорого, скрупулёзно</h2>
-	<p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+	<section class="slider">
+	  <ul class="ul-slider">
+		<li class="slide-1">slide-1</li>
+		<li class="slide-2">slide-2</li>
+		<li class="slide-3">slide-3</li>
+	  </ul>
 	
-	<section class="services">
-	<a href="studio.html">УЗНАТЬ БОЛЬШЕ</a>
 	<h3>ВЕБ-САЙТЫ</h3>
 	<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
 	<a href="shop.html">ЗАКАЗАТЬ</a>
