Добавил классы, добавил article.

--- a/index.html
+++ b/index.html
@@ -28,57 +28,70 @@
 		<li class="slide-2">slide-2</li>
 		<li class="slide-3">slide-3</li>
 	  </ul>
-	
-	<h3>ВЕБ-САЙТЫ</h3>
-	<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-	<a href="shop.html">ЗАКАЗАТЬ</a>
-	<h3>ПРИЛОЖЕНИЯ</h3>
-	<p>Покорите топ-10 приложений в AppStore и Google Play</p>
-	<a href="shop.html">ЗАКАЗАТЬ</a>
-	<h3>ПРЕЗЕНТАЦИИ</h3>
-	<p>Вы даже не подозреваете насколько вы изумительны</p>
-	<a href="shop.html">ЗАКАЗАТЬ</a>
 	</section>
 	
-	<section class="features">
-	<b><p>Мы - маленькая, но гордая дизайн-студия из Краснодара.</p></b>
-	<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
-	<b><p>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p></b>
-	<ul>
-		<li>Bеб-сайтов любой сложности</li>
-		<li>Мобильных приложений для iOS и Android</li>
-		<li>Слайдшоу и видео для корпоративных презентаций</li>
+	<section class="services">
+	<ul class="services-web-site">
+	  <li class="services-web-site-list"><h3 class="services-web-site-title">ВЕБ-САЙТЫ</h3>
+	    Мир никогда не будет прежним после того как увидит ваш сайт!
+	    <a class="services-web-site-link" href="shop.html">ЗАКАЗАТЬ</a>
+	  </li>
 	</ul>
-	<img src = "img_2/main_logo.svg" alt = "Логотип студии_цветной">
-	<b><p>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЁМ:</p></b>
-	<table>
-		<tr>
-		  <td>146%</td>
-		  <td>100%</td>
-		  <td>50%</td>
-		</tr>
-		<tr>
-		  <td>Уровень самоотдачи</td>
-		  <td>Соблюдение сроков</td>
-		  <td>Минимальная предоплата</td>
-		</tr>
-	</table>
+	<ul class="services-application">
+	  <li class="services-application-list"><h3 class="service-application-title">ПРИЛОЖЕНИЯ</h3>
+	   Покорите топ-10 приложений в AppStore и Google Play
+	   <a class="services-application-link" href="shop.html">ЗАКАЗАТЬ</a>
+	  </li>
+    </ul>
+	<ul class="services-presentation">
+	  <li class="services-presentation-list"><h3 class="services-presentation-list">ПРЕЗЕНТАЦИИ</h3>
+	  Вы даже не подозреваете насколько вы изумительны
+	  <a class="services-presentation-link" href="shop.html">ЗАКАЗАТЬ</a>
+	</section>
 	
-	<a href="#"><img src="img/html_academy.svg" alt = "Логотип_html_academy"> 
+	
+	<article class="features.article">
+		<section class="features1">
+		<b class="features1.b">Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
+		Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.
+		<b class="features1.b">ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</b>
+		<ul class="features1.ul">
+			<li class="features1.li">Bеб-сайтов любой сложности</li>
+			<li class="features1.li">Мобильных приложений для iOS и Android</li>
+			<li class="features1.li">Слайдшоу и видео для корпоративных презентаций</li>
+		</ul>
+		</section>
+	
+		<section class="features2">
+		<img src="img_2/main_logo.svg" alt="Логотип студии цветной">
+		<b class="features2.b">С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЁМ:</b>
+		<dl class="features2.dl">
+			<dt class="features2.dl">146%</dt>
+				<dd class="features2.dd">Уровень самоотдачи</dd>
+			<dt class="features2.dl">100%</dt>
+				<dd class="features2.dd">Соблюдение сроков</dd>
+			<dt class="features3.dl">50%</dt>
+				<dd class="features3.dd">Минимальная предоплата</dd>
+		</dl>			
+		</section>
+	</article>
+	
+	<section class="companies logo">
+	<a href="#"><img src="img/html_academy.svg" alt = "Логотип html academy"> 
 	</a>
-	<a href="#"><img src="img/borodinsky.svg" alt = "Логотип_borodinsky"> 
+	<a href="#"><img src="img/borodinsky.svg" alt = "Логотип borodinsky"> 
 	</a>
-	<a href="#"><img src="img/pink.svg" alt = "Логотип_pink"> 
+	<a href="#"><img src="img/pink.svg" alt = "Логотип pink"> 
 	</a>
-	<a href="#"><img src="img/mishka.svg" alt = "Логотип_mishka"> 
+	<a href="#"><img src="img/mishka.svg" alt = "Логотип mishka"> 
 	</a>
  	</section>
 	
-	<div>
-	<h3>NЁRDS DESIGN STUDIO</h3>
-	<p>191186, Cанкт-Петербург,<br>
-	ул.Б.Конюшенная, д.19/8<br>
-	<br> тел.+7(812)275-75-75
+	<div class="contacts">
+	<h3 class="contacts.h3">NЁRDS DESIGN STUDIO</h3>
+	<p class="contacts.p">191186, Cанкт-Петербург,
+	ул.Б.Конюшенная, д.19/8
+	тел.+7(812)275-75-75
 	</p>
 	<a href="modal_window_write_to_us.html">Напишите нам</a>
 	
@@ -88,12 +101,11 @@
  
   <footer>
   <div class = "footer-social">
-  <b>Давайте дружить, это выгодно!</b>
-  <p>Скидка 10% для друзей из социальных сетей</p>
-  <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
+  <ul class="footer-social.ul">
+          <li class="social-button.li"><a class="social-button.a" href="#">Вконтакте</a></li>
+          <li class="social-button.li"><a class="social-button.a" href="#">Фейсбук</a></li>
+          <li class="social-button.li"><a class="social-button.a" href="#">Инстаграм</a></li>
         </ul>
-  
+  <b class="footer.b">Давайте дружить, это выгодно!</b>
+  <p class="footer.p">Скидка 10% для друзей из социальных сетей</p>
 </html>
