Изменил название классов, изменил footer

--- a/index.html
+++ b/index.html
@@ -105,20 +105,27 @@
 	  <h3 class="contacts-title">NЁRDS DESIGN STUDIO</h3>
 	  <p class="contacts-text">191186, Cанкт-Петербург,
 	   ул.Б.Конюшенная, д.19/8</p>
-	  <p class='contacts-text>тел.+7(812)275-75-75
+	  <p class="contacts-text">тел.+7(812)275-75-75
 	   </p>
 	   <a href="modal_window_write_to_us.html">Напишите нам</a>
 	
     <!--карта-->
 	</div>
   </main>
- 
   <footer class="main-footer">
-   <ul class="footer-social-list">
-         <li class="social-button"><a class="social-button" href="#">Вконтакте</a></li>
-         <li class="social-button"><a class="social-button" href="#">Фейсбук</a></li>
-         <li class="social-button"><a class="social-button" href="#">Инстаграм</a></li>
-   </ul>
-   <b class="footer-slogan">Давайте дружить, это выгодно!</b>
-   <p class="footer-text">Скидка 10% для друзей из социальных сетей</p>
+	<ul class="footer-social-list">
+         <li class="social-button">
+			<a class="social-button" href="#">Вконтакте</a>
+		</li>
+         <li class="social-button">
+			<a class="social-button" href="#">Фейсбук</a>
+		</li>
+         <li class="social-button">
+			<a class="social-button" href="#">Инстаграм</a>
+		</li>
+	</ul>
+	<b class="footer-slogan">Давайте дружить, это выгодно!</b>
+	<p class="footer-text">Скидка 10% для друзей из социальных сетей</p>
+   </footer>
+ </body>
 </html>
