--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<ul class="navigation">
 		  <li class="navigation-item active-item"><a href="#">Студия</a></li>
 		  <li class="navigation-item"><a href="#">Клиенты</a></li>
-		  <li class="navigation-item"><a href="#">Магазин</a></li>
+		  <li class="navigation-item"><a href="shop.html">Магазин</a></li>
 		  <li class="navigation-item"><a href="#">Контакты</a></li>
 		</ul>
 		<ul class="navigation">
