--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		  <li class="navigation-item"><a href="shop.html">Магазин</a></li>
 		  <li class="navigation-item"><a href="#">Контакты</a></li>
 		</ul>
-		<ul class="navigation">
+		<ul class="user-navigation">
 		  <li class="menu-Cart"><a href="#">Корзина</a></li>
 		</ul>
 	 </nav>
