Изменил название классов, закрыл правильно тег

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		  <li class="navigation-item"><a href="#">Контакты</a></li>
 		</ul>
 		<ul class="user-navigation">
-		  <li class="menu-Cart"><a href="#">Корзина</a></li>
+		  <li class="user-navigation-item"><a href="#">Корзина</a></li>
 		</ul>
 	 </nav>
 	</header>	
@@ -25,22 +25,19 @@
 	<section class="slider">
 	  <ul class="slider-list">
 		<li class="slide">
-			<h3 class="slider-title">Долго,дорого скрупулезно.</h3>
-			<p class="slider-description">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-			<img src="img/slide.svg" alt="Слайд1">
-			<a class="slider-link" href="#">УЗНАТЬ БОЛЬШЕ<a/>
+			<h3 class="slide-title">Долго,дорого скрупулезно.</h3>
+			<p class="slide-description">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+	 	    <a class="slide-link" href="#">УЗНАТЬ БОЛЬШЕ</a>
 		</li>
 		<li class="slide">
-			<h3 class="slider-title">Любим математику как никто другой.</h3>
-			<p class="slider-description">Никакого креатива, только математические формулы для расчёта идеальных пропорций.</p>
-			<img src="img/slide2.svg" alt="Слайд2">
+			<h3 class="slide-title">Любим математику как никто другой.</h3>
+			<p class="slide-description">Никакого креатива, только математические формулы для расчёта идеальных пропорций.</p>
 			<a class="slider-link" href="#">УЗНАТЬ БОЛЬШЕ</a>
 		</li>
 		<li class="slide">
-			<h3 class="slider-title">Только ночь, только хардкор.</h3>
-			<p class="slider-description">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-			<img src="img/slide3.svg" alt="Слайд3">
-			<a class="slider-link" href="#">УЗНАТЬ БОЛЬШЕ</a>		
+			<h3 class="slide-title">Только ночь, только хардкор.</h3>
+			<p class="slide-description">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+			<a class="slide-link" href="#">УЗНАТЬ БОЛЬШЕ</a>		
 	  </ul>
 	</section>
 	
