Изменил название классов

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 		<section class="features-numbers">
 		<img src="img_2/main_logo.svg" alt="Логотип студии цветной">
 		<b class="features-date">С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЁМ:</b>
-		<dl class="features-numbers-list">
-			<dt class="features-numbers-list-description">Уровень самоотдачи</dt>
-				<dd class="features-numbers-list-percentage">146%</dd>
-			<dt class="features-numbers-list-description">Соблюдение сроков</dt>
-				<dd class="features-numbers-list-percentage">100%</dd>
-			<dt class="features-numbers-list-description">Минимальная предоплата</dt>
-				<dd class="features-numbers-list-percentage">50%</dd>
+		<dl class="features-numbers">
+			<dt class="features-numbers-description">Уровень самоотдачи</dt>
+				<dd class="features-numbers-percentage">146%</dd>
+			<dt class="features-numbers-description">Соблюдение сроков</dt>
+				<dd class="features-numbers-percentage">100%</dd>
+			<dt class="features-numbers-description">Минимальная предоплата</dt>
+				<dd class="features-numbers-percentage">50%</dd>
 		</dl>			
 		</section>
 	</article>
@@ -112,13 +112,13 @@
   <footer class="main-footer">
 	<ul class="footer-social-list">
          <li class="social-button">
-			<a class="social-button" href="#">Вконтакте</a>
+			<a href="#">Вконтакте</a>
 		</li>
          <li class="social-button">
-			<a class="social-button" href="#">Фейсбук</a>
+			<a href="#">Фейсбук</a>
 		</li>
          <li class="social-button">
-			<a class="social-button" href="#">Инстаграм</a>
+			<a href="#">Инстаграм</a>
 		</li>
 	</ul>
 	<b class="footer-slogan">Давайте дружить, это выгодно!</b>
