Исправил название класса

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<li class="slide">
 			<h3 class="slide-title">Любим математику как никто другой.</h3>
 			<p class="slide-description">Никакого креатива, только математические формулы для расчёта идеальных пропорций.</p>
-			<a class="slider-link" href="#">УЗНАТЬ БОЛЬШЕ</a>
+			<a class="slide-link" href="#">УЗНАТЬ БОЛЬШЕ</a>
 		</li>
 		<li class="slide">
 			<h3 class="slide-title">Только ночь, только хардкор.</h3>
