Обернул текст в p и добавил класс

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<article class="features">
 		<section class="features-info">
 		<b class="features-slogan">Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
-		Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.
+		<p class="features-slogan">Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
 		<b class="features-order">ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</b>
 		<ul class="features-order-list">
 			<li class="features-order-description">Bеб-сайтов любой сложности</li>
