--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
 			</li>
 			<li class="catalog-item"><img src="img/pink.svg" alt="pink">
 			</li>
-			<li class="catalog-item><img src=img/barbershop.svg" alt="Барбершоп Бородинский>
+			<li class="catalog-"><img src=img/"barbershop.svg" alt="Барбершоп Бородинский">
 			</li>
 			<li class="catalog-item"><img src="img/Mishka.svg" alt="Магазин Mishka">
 			</li>
