Добавил класс active-item для ссылки на Магазин

--- a/catalog.html
+++ b/catalog.html
@@ -9,9 +9,9 @@
 	 <nav class="main-menu-navigation">
 		 <img src="img/header-logo.svg" width="215" height="180" alt="Логотип дизайн-студии Нердс">
 		<ul class="navigation">
-		  <li class="navigation-item active-item"><a href="#">Студия</a></li>
+		  <li class="navigation-item"><a href="#">Студия</a></li>
 		  <li class="navigation-item"><a href="#">Клиенты</a></li>
-		  <li class="navigation-item"><a href="shop.html">Магазин</a></li>
+		  <li class="navigation-item active-item"><a href="shop.html">Магазин</a></li>
 		  <li class="navigation-item"><a href="#">Контакты</a></li>
 		</ul>
 		<ul class="user-navigation">
