Добавил ссылки внутри <li>

--- a/catalog.html
+++ b/catalog.html
@@ -27,9 +27,9 @@
 	<div class="price">Стоимость:</div>
 	<div class="sort">Сортировать:</div>
 	<ul class="sort">
-		<li class="sort-price">ПО ЦЕНЕ</li>
-		<li class="sort-type">ПО ТИПУ</li>
-		<li class="sort-name">ПО НАЗВАНИЮ</li>
+		<li class="sort-price"><a href="#">ПО ЦЕНЕ</a></li>
+		<li class="sort-type"><a href="#">ПО ТИПУ</a></li>
+		<li class="sort-name"><a href="#">ПО НАЗВАНИЮ</a></li>
 	</ul>
 	
 	<section class="catalog">
