Добавил название классов, добавил секции с фильтрацией

--- a/catalog.html
+++ b/catalog.html
@@ -21,27 +21,49 @@
 	</header>	
   </body>
   <main class="container">
-   
-	<h1 class="page-title">Магазин готовых шаблонов<h1>
-	
-	<div class="price">Стоимость:</div>
-	<div class="sort">Сортировать:</div>
-	<ul class="sort">
-		<li class="sort-price"><a href="#">ПО ЦЕНЕ</a></li>
-		<li class="sort-type"><a href="#">ПО ТИПУ</a></li>
-		<li class="sort-name"><a href="#">ПО НАЗВАНИЮ</a></li>
-	</ul>
-	
+	<h1 class="page-title">Магазин готовых шаблонов</h1>
+	<section class="filter">
+		<b class="filter-title">Стоимость</b>
+		
+		<b class="net">Сетка:</b>
+			<ul class="net">
+				<li class="net-item"><a href="#">Адаптивная</a></li>
+				<li class="net-item"><a href="#">Фиксированная</a></li>
+				<li class="net-item"><a href="#">Резиновая</a></li>
+			</ul>
+		<b class="feauteres">Особенности:</b>
+			<ul class="features">
+				<li class="features-item"><a href="#">Слайдер</a></li>
+				<li class="features-item"><a href="#">Блок преимуществ</a></li>
+				<li class="features-item"><a href="#">Новости</a></li>
+				<li class="features-item"><a href="#">Галерея</a></li>
+				<li class="features-item"><a href="#">Корзина</a></li>
+			</ul>
+		<ul class="features-button">
+			<li class="button-item"><a href="#">Показать</a></li>
+		</ul>
+		
 	<section class="catalog">
+		<div class="sort">
+			<b class="sort-title">Сортировать:</b>
+			<ul class="sort">
+				<li class="sort-price"><a href="#">ПО ЦЕНЕ</a></li>
+				<li class="sort-type"><a href="#">ПО ТИПУ</a></li>
+				<li class="sort-name"><a href="#">ПО НАЗВАНИЮ</a></li>
+			</ul>
+		</div>	
 		<ul class="catalog-list">
-			<li class="catalog-sedona"><img src="img/sedona.svg" alt="sedona">
-			<b>SEDONA</b>
-				Информационный сайт для туристов
+			<li class="catalog-item"><img src="img/sedona.svg" alt="sedona">
+			<div class="work-example">
+				<b class="work-name">SEDONA</b>
+					<p class="work-description">Информационный сайт для туристов
 				<a class="button" href="#">9900</a>
+				</p>
+			</div>
 			</li>
 			<li class="catalog-item"><img src="img/pink.svg" alt="pink">
 			</li>
-			<li class="catalog-"><img src=img/"barbershop.svg" alt="Барбершоп Бородинский">
+			<li class="catalog-item"><img src=img/"barbershop.svg" alt="Барбершоп Бородинский">
 			</li>
 			<li class="catalog-item"><img src="img/Mishka.svg" alt="Магазин Mishka">
 			</li>
