Изменил класс, добавил кнопки прокрутки и исправил ошибки в ссылках на рисунки

--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
 	<h1 class="page-title">Магазин готовых шаблонов</h1>
 	<section class="filter">
 		<b class="filter-title">Стоимость</b>
-		
+
 		<b class="net">Сетка:</b>
 			<ul class="net">
 				<li class="net-item"><a href="#">Адаптивная</a></li>
@@ -46,10 +46,14 @@
 	<section class="catalog">
 		<div class="sort">
 			<b class="sort-title">Сортировать:</b>
-			<ul class="sort">
-				<li class="sort-price"><a href="#">ПО ЦЕНЕ</a></li>
-				<li class="sort-type"><a href="#">ПО ТИПУ</a></li>
-				<li class="sort-name"><a href="#">ПО НАЗВАНИЮ</a></li>
+			<ul class="sort-list">
+				<li class="sort-item"><a href="#">ПО ЦЕНЕ</a></li>
+				<li class="sort-item"><a href="#">ПО ТИПУ</a></li>
+				<li class="sort-item"><a href="#">ПО НАЗВАНИЮ</a></li>
+			</ul>
+			<ul class="scroll-button">
+				<li class="button-item"><a href="#">Вверх</a></li>
+				<li class="button-item"><a href="#">Вниз</a></li>
 			</ul>
 		</div>	
 		<ul class="catalog-list">
@@ -63,7 +67,7 @@
 			</li>
 			<li class="catalog-item"><img src="img/pink.svg" alt="pink">
 			</li>
-			<li class="catalog-item"><img src=img/"barbershop.svg" alt="Барбершоп Бородинский">
+			<li class="catalog-item"><img src="img/barbershop.svg" alt="Барбершоп Бородинский">
 			</li>
 			<li class="catalog-item"><img src="img/Mishka.svg" alt="Магазин Mishka">
 			</li>
